:construction_worker: add: the step to set codecov env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,15 +65,20 @@ jobs:
             set -x
             docker-compose exec app yarn test-vue
       - run:
+          name: set the codecov env
+          command: |
+            set -x
+            if [ -z $CODECOV_TOKEN ];then echo "CODECOV_TOKEN is not configured.";else docker-compose exec app export CODECOV_TOKEN=$CODECOV_TOKEN;fi
+      - run:
           name: codecov for express
           command: |
             set -x
-            docker-compose exec app yarn codecov-express
+            if [ -z $CODECOV_TOKEN ];then echo "CODECOV_TOKEN is not configured.";else docker-compose exec app yarn codecov-express;fi
       - run:
           name: codecov for vue
           command: |
             set -x
-            docker-compose exec app yarn codecov-vue
+            if [ -z $CODECOV_TOKEN ];then echo "CODECOV_TOKEN is not configured.";else docker-compose exec app yarn codecov-vue;fi
       - run:
           name: docker-compose down
           command: docker-compose down
