--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
           name: set the codecov env
           command: |
             set -x
-            if [ -z $CODECOV_TOKEN ];then echo "CODECOV_TOKEN is not configured.";else docker-compose exec app export CODECOV_TOKEN=$CODECOV_TOKEN;fi
+            if [ -z $CODECOV_TOKEN ];then echo "CODECOV_TOKEN is not configured.";else docker-compose exec app /bin/sh -c "export CODECOV_TOKEN=$CODECOV_TOKEN";fi
       - run:
           name: codecov for express
           command: |
