--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "scripts": {
     "build": "yarn build-express && yarn build-vue",
     "build-express": "cd ./express && yarn build",
-    "build-vue": "cd ./vue && export IN_DOCKER=true && yarn build",
+    "build-vue": "cd ./vue && yarn build",
     "codecov": "yarn codecov-express && yarn codecov-vue",
     "codecov-express": "cd ./express && ../node_modules/codecov/bin/codecov",
     "codecov-vue": "cd ./vue && ../node_modules/codecov/bin/codecov",
     "commit": "git cz",
+    "docker:in": "export IN_DOCKER=true",
+    "docker:out": "export IN_DOCKER=false",
     "ignore": "curl https://raw.githubusercontent.com/microsoft/TypeScript/master/.gitignore | add-text-to-markdown ./.gitignore --section 'microsoft/TypeScript:.gitignore' --write",
     "preinstall": "npx only-allow yarn",
     "license": "license-checker --json > ./licenses.json && yarn license-express && yarn license-vue",
