--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "sort-package-json": "npx sort-package-json && yarn sort-package-json-express && yarn sort-package-json-vue",
     "sort-package-json-express": "cd ./express && npx sort-package-json",
     "sort-package-json-vue": "cd ./vue && npx sort-package-json",
+    "splite:off": "export SQLITE=false",
+    "splite:on": "export SQLITE=true",
     "start": "cd ./express && yarn start",
     "test": "yarn test-express && yarn test-vue",
     "test-express": "cd ./express && yarn test",
