:sparkles: add: the ui for adding new machine

--- a/express/package.json
+++ b/express/package.json
@@ -55,6 +55,7 @@
     "moment": "2.28.0",
     "pg": "8.3.3",
     "pino": "6.6.1",
+    "short-uuid": "4.1.0",
     "sqlite3": "5.0.0",
     "tsoa": "2.5.14",
     "typeorm": "0.2.26"
