--- a/express/package.json
+++ b/express/package.json
@@ -49,6 +49,7 @@
     "cookie-parser": "1.4.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-fileupload": "1.2.0",
     "express-openapi-validator": "3.17.2",
     "helmet": "4.1.1",
     "jsonwebtoken": "8.5.1",
