--- a/express/package.json
+++ b/express/package.json
@@ -54,6 +54,7 @@
     "helmet": "4.1.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.28.0",
+    "morgan": "1.10.0",
     "pg": "8.3.3",
     "pino": "6.6.1",
     "short-uuid": "4.1.0",
