--- a/express/package.json
+++ b/express/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@types/express": "4.17.8",
     "@types/jest": "26.0.14",
+    "@types/multer": "^1.4.4",
     "@types/pg": "7.14.5",
     "@types/pino": "6.3.1",
     "@types/shelljs": "0.8.8",
