--- a/express/package.json
+++ b/express/package.json
@@ -51,6 +51,7 @@
     "express": "4.17.1",
     "express-fileupload": "1.2.0",
     "express-openapi-validator": "3.17.2",
+    "file-type": "15.0.1",
     "helmet": "4.1.1",
     "jsonwebtoken": "8.5.1",
     "moment": "2.28.0",
