:pencil: added: youtube-url

--- a/express/package.json
+++ b/express/package.json
@@ -13,15 +13,15 @@
     "openapi3",
     "TypeScript"
   ],
-  "homepage": "https://github.com/smart-post-box/smart-post-box#readme",
+  "homepage": "https://github.com/cfj-ccc2020-smart-post-box/smart-post-box#readme",
   "bugs": {
-    "url": "https://github.com/smart-post-box/smart-post-box/issues"
+    "url": "https://github.com/cfj-ccc2020-smart-post-box/smart-post-box/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/smart-post-box/smart-post-box.git"
+    "url": "git+https://github.com/cfj-ccc2020-smart-post-box/smart-post-box.git"
   },
-  "license": "MIT",
+  "license": "GPL-2.0-only",
   "author": "waricoma <waricoma@devne.co>",
   "contributors": [
     "waricoma <waricoma@devne.co>"
